# etebase-py

./: .gitignore  .travis.yml  Cargo.toml  ChangeLog.md  MANIFEST.in  README.md  build.rs  example.py  example_crud.py  pytest.ini  requirements.txt  run_all_tests.sh  setup.py
.github/workflows/: manual.yml
etebase/: __init__.py  etebase_python.pyi
etesync/: __init__.py  _version.py  api.py  cache.py  crypto.py  db.py  exceptions.py  pim.py  service.py
requirements.in/: development.txt  requirements-dev.txt
src/: glue.rs.in
tests/: __init__.py  test_collections.py  test_crypto.py  test_service.py  test_smoketest.py
